feat: added link for effects style

--- a/NotAuthorized/WhoIsTarta.html
+++ b/NotAuthorized/WhoIsTarta.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="..\NotAuthorized\medialStyleWhoIsTarls.css" />
     <link rel="stylesheet" href="..\changeColor.css" />
     <link rel="stylesheet" href="popup.css" />
+    <link rel="stylesheet" href="..\effects.css" />
     <title>Who is tarla?</title>
   </head>
   <body class="body theme-element">
@@ -70,7 +71,7 @@
         </div> 
     </header>
     <h2 class="theme-element" data-i18="OurMessage" id="ourMessege">Our message</h1>
-    <section class="section2 theme-element">
+    <section class="section2 theme-element parallax">
       <div class="div2">
         <div>
           <h3 data-i18="CustomerHealth">Customer Health and Well-being First</h3>
