--- a/NotAuthorized/index.html
+++ b/NotAuthorized/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="popup.css" />
     <link rel="stylesheet" href="swaper.css" />
     <link rel="stylesheet" href="..\changeColor.css" />
+    <link rel="stylesheet" href="..\effects.css" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"
@@ -246,7 +247,7 @@
     <section class="section8 theme-element">
       <p data-i18="JoinOurCommunity" class="H8">Join our community</p>
       <p data-i18="GetBaked" class="p8">and let's get baked</p>
-      <button  class="button8 theme-button"><a data-i18="SendUsMessage" href="mailto:polina.solodkova507@gmail.com">Let's start</a></button>
+      <button  class="button8 theme-button "><a data-i18="SendUsMessage" href="mailto:polina.solodkova507@gmail.com">Let's start</a></button>
     </section>
     
     <footer class="footer theme-element">
