--- a/NotAuthorized/location.html
+++ b/NotAuthorized/location.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="styleLocation.css" />
     <link rel="stylesheet" href="..\changeColor.css" />
     <link rel="stylesheet" href="popup.css"/>
+    <link rel="stylesheet" href="..\effects.css"/>
     <title>We located</title>
 </head>
 <body class="body">
@@ -99,8 +100,7 @@
                 Legend of El Tarlà. A young man who brought joy to the isolated
                 citizens of Girona during an outbreak of the plague.
               </p>
-            </div>
-                  
+            </div>                  
     </section>
     <footer class="footer theme-element">
       <div class="icon">
