--- a/Tarla/aboutUs.html
+++ b/Tarla/aboutUs.html
@@ -6,6 +6,7 @@
     <title>About us</title>
     <link rel="stylesheet" href="..\Tarla\aboutUs.css" />
     <link rel="stylesheet" href="..\changeColor.css" />
+    <link rel="stylesheet" href="..\effects.css" />
   </head>
     <header class="header theme-specialElement">
     <div class="hamburger-menu theme-specialElement">
@@ -135,7 +136,7 @@
         </ul>
       </div>
     </section>
-    <section class=" map theme-specialElement">
+    <section class="map theme-specialElement">
       <div  class="visibleMap">
         <script  type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A95807406d856345eba73c97d2893c444290a9934cbe996ff770a6fd6f2be3302&amp;width=570&amp;height=376&amp;lang=ru_RU&amp;scroll=true"></script>  
       </div>
