--- a/Tarla/catalog.html
+++ b/Tarla/catalog.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="catalog.css" />
     <link rel="stylesheet" href="..\changeColor.css" />
+    <link rel="stylesheet" href="..\changeColor.css" />
+    <link rel="stylesheet" href="..\effects.css" />
     <title>Catalog</title>
   </head>
   <header class="header theme-specialElement">
