--- a/Tarla/index.html
+++ b/Tarla/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="mediaStyle.css" />
     <link rel="stylesheet" href="swaper.css" />
     <link rel="stylesheet" href="..\changeColor.css" />
+    <link rel="stylesheet" href="..\effects.css" />
   </head>
   <header class="header theme-element">
     <div class="hamburger-menu theme-element">
@@ -194,7 +195,7 @@
     <section id="shop" class="section4 theme-element">
       <p data-i18="FreshPastry" class="H4">Shop pastry kits</p>
       <div class="div4">
-        <div>
+        <div >
           <img class="img4" src="..\Images\3-1.png" alt="" />
           <p data-i18="AllButter" class="p4_2">All-Butter Croissant</p>
           <p data-i18="KitOf6" class="p4_3">Kit of 6 - £13.50</p>
@@ -204,7 +205,7 @@
             >
           </button>
         </div>
-        <div>
+        <div >
           <img class="img4" src="..\Images\3-2.png" alt="" />
           <p data-i18="Almond" class="p4_2">Almond Croissant</p>
           <p data-i18="KitOf6" class="p4_3">Kit of 6 - £13.50</p>
@@ -214,7 +215,7 @@
             >
           </button>
         </div>
-        <div>
+        <div >
           <img class="img4" src="..\Images\3-3.png" alt="" />
           <p data-i18="Raspberry" class="p4_2">Raspberry Danish</p>
           <p data-i18="KitOf6" class="p4_3">Kit of 6 - £13.50</p>
