feat: added favicon

--- a/NotAuthorized/WhoIsTarta.html
+++ b/NotAuthorized/WhoIsTarta.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="popup.css" />
     <link rel="stylesheet" href="..\effects.css" />
     <title>Who is tarla?</title>
+    <link rel="icon" href="..\Images\croissant.png" type="image/png">
   </head>
   <body class="body theme-element">
     <header id="top" class="header theme-element lockPadding">
