--- a/NotAuthorized/index.html
+++ b/NotAuthorized/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tarla</title>
+    <link rel="icon" href="..\Images\croissant.png" type="image/png">
     <link rel="stylesheet" href="..\NotAuthorized\style.css" />
     <link rel="stylesheet" href="mediaStyle.css" />
     <link rel="stylesheet" href="popup.css" />
