--- a/NotAuthorized/location.html
+++ b/NotAuthorized/location.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="popup.css"/>
     <link rel="stylesheet" href="..\effects.css"/>
     <title>We located</title>
+    <link rel="icon" href="..\Images\croissant.png" type="image/png">
 </head>
 <body class="body">
     <header id="top" class="header theme-specialElement lockPadding">
