--- a/Tarla/index.html
+++ b/Tarla/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tarla</title>
+    <link rel="icon" href="..\Images\croissant.png" type="image/png">
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"
