fix: fixed little mistakes

--- a/NotAuthorized/WhoIsTarta.html
+++ b/NotAuthorized/WhoIsTarta.html
@@ -71,7 +71,7 @@
         </button>
         </div> 
     </header>
-    <h2 class="theme-element" data-i18="OurMessage" id="ourMessege">Our message</h1>
+    <h2 id="ourMessage"  class="theme-element" data-i18="OurMessage" id="ourMessege">Our message</h1>
     <section class="section2 theme-element parallax">
       <div class="div2">
         <div>
