--- a/NotAuthorized/location.html
+++ b/NotAuthorized/location.html
@@ -66,7 +66,7 @@
             <div class="text">
               <h1 data-i18="AmazingIngredients" id="ingredient" class="textH1">Amazing Ingredients</h1>
               <img class="unvisibleImg" src="..\Images\aboutUs1.png" alt="" />
-              <p data-i18="AmazingIngredientsDifs" class="textP">
+              <p data-i18="AmazingIngredientsDif" class="textP">
                 We like to keep things simple and authentic. We’ve sourced the very
                 best from the very best, from our Poitou-Charentes butter to our
                 Valrhona chocolate batons.
