--- a/NotAuthorized/index.html
+++ b/NotAuthorized/index.html
@@ -31,7 +31,7 @@
     </div>
     <img class="img" src="..\Images\Frame.png" alt="logo" />
     <ul class="navigation">
-      <li class="li"><a data-i18="headerShop" class="link theme-element" href="#registration"> Shop</a></li>
+      <li class="li"><a data-i18="headerShop" class="link theme-element" href="#shop"> Shop</a></li>
       <li class="li"><a data-i18="headerHowItWork" class="link theme-element" href="#howItWorks">How it works?</a></li>
       <li class="li"><a data-i18="headerWhoIsTarla" class="link theme-element" href="#whoIsTarla">Who is Tarla?</a></li>
     </ul>
@@ -137,10 +137,10 @@
       <script src="..\signUp.js"></script>
     </div>
     
-    <section class="section1 theme-block">
+    <section id="shop"class="section1 theme-block">
       <div class="div1">
         <p data-i18="FreshPastryKits" class="H1">Fresh pastry kits</p>
-        <p data-i18="Smells" class="P1">
+        <p  data-i18="Smells" class="P1">
           Bringing the smells and tastes of your favourite patisserie to your
           home. Our kits have everything you need to easily make killer pastries
           every time. We’ve done the tricky bits so all you need to do is roll,
