--- a/NotAuthorized/index.html
+++ b/NotAuthorized/index.html
@@ -54,13 +54,12 @@
     </div>
     <div class="switchers">
     <button class="logIn popupAuthorization theme-blueButton">
-       <a href="#popup"> <img src="..\Images\LogIn.png" alt="Log In" /></a>
+       <a href="#popup"> <img src="..\Images\authorization.png" alt="Log In" /></a>
     </button>
     <button  class="logIn popupRegistration theme-blueButton">
-      <a href="#popup2"><img src="..\Images\SignUp.png" alt="Sign Up" /></a>
+      <a href="#popup2"><img src="..\Images\registration.png" alt="Sign Up" /></a>
     </button>
-    </div> 
-    
+    </div>     
   </header>
   <body class="body">
     <div id="popup" class="popup">
@@ -68,13 +67,12 @@
         <div class="popupContent">
          <h3 data-i18="LogIn">Log in</h3> 
          <a href="" class="popupClose closePopup">x</a>          
-          <form id="loginForm">
+          <form id="loginForm" >
             <input data-i18="Username" type="text" id="username" name="username" placeholder="Username" required>
             <input data-i18="Password" type="password" id="loginPassword" name="password" placeholder="Password" required>
            <div class="buttonDiv">
             <button data-i18="Enter" class="authorizationButton" type="submit">Enter</button>
-            <button data-i18="Registration" class="authorizationButton popupRegistration" ><a href="#popup2">Registration</a>          
-           </div>
+            </div>
          </form>
           <script src="..\logIn.js"></script>
         </div>
@@ -119,7 +117,7 @@
           <div class="form-group">
               <label for="nickname">Никнейм:</label>
               <input type="text" id="nickname" name="nickname" placeholder="Никнейм" required readonly>
-              <button type="button" id="regenerateNickname">Сгенерировать никнейм</button>
+              <button type="button" id="regenerateNickname" class="registrationButton">Сгенерировать никнейм</button>
               <span class="error" id="nicknameError"></span>
           </div>
           <div class="form-group">
@@ -127,7 +125,7 @@
               <label for="agreement">Я прочитал(а) и согласен(а) с <a href="#">Соглашением пользователя</a></label>
               <span class="error" id="agreementError"></span>
           </div>
-          <button type="submit" class="registration">
+          <button type="submit" class="registration registrationButton">
            Зарегистрироваться
            </button>
           <span class="success" id="successMessage"></span>
@@ -177,7 +175,7 @@
       <div class="div2">
         <div class="img2">
           <img src="..\Images\1.png" alt="" />
-          <p data-i18="ChoseYourFave" class="H2_2">Choose your fave</p>
+          <p data-i18="ChoseYourFav" class="H2_2">Choose your fave</p>
           <p data-i18="ChoseYourFaveDef" class="p2_2">
             This sounds easier than it's going to be. We've got all the classics
             on here, so now it's over to you.
