--- a/NotAuthorized/location.html
+++ b/NotAuthorized/location.html
@@ -53,11 +53,11 @@
           </div>
           <div class="switchers">
             <button class="logIn popupAuthorization theme-blueButton">
-               <a href="#popup"> <img src="..\Images\LogIn.png" alt="Log In" /></a>
-            </button>
-            <button  class="logIn popupRegistration theme-blueButton">
-              <a href="#popup2"><img src="..\Images\SignUp.png" alt="Sign Up" /></a>
-            </button>
+              <a href="#popup"> <img src="..\Images\authorization.png" alt="Log In" /></a>
+           </button>
+           <button  class="logIn popupRegistration theme-blueButton">
+             <a href="#popup2"><img src="..\Images\registration.png" alt="Sign Up" /></a>
+           </button>
             </div> 
     </header>
     <section class="section theme-element">
