fix: add translation for catalog.html and for word "Enter"

--- a/Tarla/catalog.html
+++ b/Tarla/catalog.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="..\Images\croissant.png" type="image/png">
+    <link rel="icon" href="..\Images\croissant.png" type="image/png" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="catalog.css" />
@@ -19,10 +19,18 @@
       </label>
       <ul class="menu__box theme-specialElement">
         <li>
-          <a class="menu__item theme-specialElement" data-i18="Catalog" href="#catalog">Catalog</a>
+          <a
+            class="menu__item theme-specialElement"
+            data-i18="Catalog"
+            href="#catalog"
+            >Catalog</a
+          >
         </li>
         <li>
-          <a class="menu__item theme-specialElement" data-i18="Delivery" href="#delivery"
+          <a
+            class="menu__item theme-specialElement"
+            data-i18="Delivery"
+            href="#delivery"
             >Delivery</a
           >
         </li>
@@ -34,10 +42,17 @@
 
     <ul class="navigation">
       <li class="li">
-        <a class="link theme-specialElement" data-i18="Catalog" href="#catalog">Catalog</a>
+        <a class="link theme-specialElement" data-i18="Catalog" href="#catalog"
+          >Catalog</a
+        >
       </li>
       <li class="li">
-        <a class="link theme-specialElement" data-i18="Delivery" href="#delivery">Delivery</a>
+        <a
+          class="link theme-specialElement"
+          data-i18="Delivery"
+          href="#delivery"
+          >Delivery</a
+        >
       </li>
     </ul>
 
@@ -59,9 +74,9 @@
     </div>
   </header>
   <body class="body theme-element">
-    <section class="section theme-element">
+    <section id="catalog" class="section theme-element">
       <div class="card theme-element">
-        <img class="visible" id="catalog" src="..\Images\3-1.png" alt="" />
+        <img class="visible" src="..\Images\3-1.png" alt="" />
         <div class="div baseText">
           <h2 data-i18="AllButter" class="mainText">All-Butter Croissant</h2>
           <p data-i18="AllButterDiv">
@@ -74,7 +89,9 @@
           </p>
           <img class="unvisible" id="catalog" src="..\Images\3-1.png" alt="" />
           <h3 data-i18="Composition" class="mainText">Composition</h3>
-          <p data-i18="AllButterComp">flour, butter, water, milk, sugar, salt, yeast</p>
+          <p data-i18="AllButterComp">
+            flour, butter, water, milk, sugar, salt, yeast
+          </p>
           <h3 data-i18="Prices" class="mainText">Price: kit of 6 - £12</h3>
         </div>
       </div>
@@ -123,7 +140,9 @@
       </div>
       <div class="card theme-element">
         <div class="div baseText">
-          <h2 data-i18="PainAuxPaisins" PainAuxPaisins class="mainText">Pain Aux Raisins</h2>
+          <h2 data-i18="PainAuxPaisins" PainAuxPaisins class="mainText">
+            Pain Aux Raisins
+          </h2>
           <p data-i18="PainAuxPaisinsDif">
             Pain aux raisins, also known as "raisin Danish" or "raisin swirl,"
             is a delectable French pastry that showcases layers of buttery,
@@ -178,7 +197,9 @@
           </p>
           <img class="unvisible" id="catalog" src="..\Images\3-6.png" alt="" />
           <h3 data-i18="Composition" class="mainText">Composition</h3>
-          <p data-i18="PainAuChocolateComp">flour, butter, water, milk, sugar, salt, yeast, dark chocolate</p>
+          <p data-i18="PainAuChocolateComp">
+            flour, butter, water, milk, sugar, salt, yeast, dark chocolate
+          </p>
           <h3 data-i18="Prices" class="mainText">Price: kit of 6 - £13.50</h3>
         </div>
         <img class="visible" src="..\Images\3-6.png" alt="" />
@@ -195,13 +216,17 @@
           <li data-i18="SelfPickup2">
             Self-pickup hours: from 9:00 AM to 6:00 PM, Monday to Saturday.
           </li>
-          <li data-i18="SelfPickup3">Please call us in advance to confirm your order is ready.</li>
+          <li data-i18="SelfPickup3">
+            Please call us in advance to confirm your order is ready.
+          </li>
         </ul>
       </div>
       <div class="divDelivery">
         <p data-i18="PickupPoint" class="mainText">Pickup Point</p>
         <ul>
-          <li data-i18="PickupPoint1">You can pick up your order at any of our pickup points.</li>
+          <li data-i18="PickupPoint1">
+            You can pick up your order at any of our pickup points.
+          </li>
           <li data-i18="PickupPoint2">
             Pickup points are located at: 5 Pushkin Street; 20 Sadovaya Street.
           </li>
@@ -213,8 +238,12 @@
       <div class="divDelivery">
         <p data-i18="CourierDelivery" class="mainText">Courier Delivery</p>
         <ul>
-          <li data-i18="CourierDelivery1">Courier delivery is available within the city.</li>
-          <li data-i18="CourierDelivery2">Delivery hours: from 12:00 PM to 9:00 PM, Monday to Saturday.</li>
+          <li data-i18="CourierDelivery1">
+            Courier delivery is available within the city.
+          </li>
+          <li data-i18="CourierDelivery2">
+            Delivery hours: from 12:00 PM to 9:00 PM, Monday to Saturday.
+          </li>
           <li data-i18="CourierDelivery3">The delivery cost is 300 rubles.</li>
         </ul>
       </div>
@@ -223,19 +252,35 @@
   <footer class="footer theme-element">
     <div class="icon">
       <a href="tel:+375295950858">
-      <img src="..\Images\phone.png" alt="Telephone" />
+        <img src="..\Images\phone.png" alt="Telephone" />
       </a>
       <a href="https://github.com/MaltSun/TarlaProgect"
-        ><img src="..\Images\github.png" alt="Github"/></a>
+        ><img src="..\Images\github.png" alt="Github"
+      /></a>
       <a href="mailto:polina.solodkova507@gmail.com">
-       <img src="..\Images\e-mail.png" alt="E-mail" />
-    </a>      
+        <img src="..\Images\e-mail.png" alt="E-mail" />
+      </a>
     </div>
     <div class="divfooter">
-      <a data-i18="Tarla" class="link theme-element" href="..\Tarla\index.html">Tarla</a>
-      <a data-i18="headerHowItWork" class="link theme-element" href="..\Tarla\index.html">How to use</a>
-      <a data-i18="Legend" class="link theme-element" href="..\Tarla\aboutUs.html">Legend</a>
-      <a data-i18="Privacy" class="link theme-element" href="..\Tarla\aboutUs.html"
+      <a data-i18="Tarla" class="link theme-element" href="..\Tarla\index.html"
+        >Tarla</a
+      >
+      <a
+        data-i18="headerHowItWork"
+        class="link theme-element"
+        href="..\Tarla\index.html"
+        >How to use</a
+      >
+      <a
+        data-i18="Legend"
+        class="link theme-element"
+        href="..\Tarla\aboutUs.html"
+        >Legend</a
+      >
+      <a
+        data-i18="Privacy"
+        class="link theme-element"
+        href="..\Tarla\aboutUs.html"
         >Privacy Policy</a
       >
     </div>
