fix: made valid layout for location.html

--- a/NotAuthorized/index.html
+++ b/NotAuthorized/index.html
@@ -19,7 +19,7 @@
   <body class="base">
     <header class="header theme-element lockPadding">
       <div class="hamburger-menu theme-element">
-        <input id="menu__toggle" type="checkbox"/>
+        <input id="menu__toggle" type="checkbox">
         <label class="menu__btn" for="menu__toggle">
           <span></span>
         </label>
@@ -111,7 +111,7 @@
               name="username"
               placeholder="Username"
               required
-            />
+            >
             <input
               data-i18="Password"
               type="password"
@@ -119,7 +119,7 @@
               name="password"
               placeholder="Password"
               required
-            />
+            >
             <div class="buttonDiv">
               <button
                 data-i18="Enter"
@@ -148,7 +148,7 @@
                 name="phone"
                 placeholder="Номер телефона"
                 required
-              />
+              >
               <span class="error" id="phoneError"></span>
             </div>
             <div class="form-group">
@@ -159,12 +159,12 @@
                 name="email"
                 placeholder="Email"
                 required
-              />
+              >
               <span class="error" id="emailError"></span>
             </div>
             <div class="form-group">
               <label for="dob">Дата рождения:</label>
-              <input type="date" id="dob" name="dob" required />
+              <input type="date" id="dob" name="dob" required>
               <span class="error" id="dobError"></span>
             </div>
             <div class="form-group">
@@ -175,7 +175,7 @@
                 name="password"
                 placeholder="Пароль"
                 required
-              />
+              >
               <span class="error" id="passwordError"></span>
             </div>
             <div class="form-group">
@@ -186,7 +186,7 @@
                 name="confirmPassword"
                 placeholder="Повторите пароль"
                 required
-              />
+              >
               <span class="error" id="confirmPasswordError"></span>
             </div>
             <div class="form-group">
@@ -197,7 +197,7 @@
                 name="fullname"
                 placeholder="ФИО"
                 required
-              />
+              >
               <span class="error" id="fullnameError"></span>
             </div>
             <div class="form-group">
@@ -209,7 +209,7 @@
                 placeholder="Никнейм"
                 required
                 readonly
-              />
+              >
               <button
                 type="button"
                 id="regenerateNickname"
@@ -220,7 +220,7 @@
               <span class="error" id="nicknameError"></span>
             </div>
             <div class="form-group">
-              <input type="checkbox" id="agreement" name="agreement" required />
+              <input type="checkbox" id="agreement" name="agreement" required>
               <label for="agreement"
                 >Я прочитал(а) и согласен(а) с
                 <a href="#">Соглашением пользователя</a></label
@@ -279,7 +279,7 @@
       </div>
     </section>
     <section id="howItWorks" class="section2 theme-element">
-      <p data-i18="headerHowItWork" class="p2">How it works</p>
+      <h1 data-i18="headerHowItWork" class="p2">How it works</h1>
       <div class="div2">
         <div class="img2">
           <img src="../Images/1.png" alt="">
@@ -327,7 +327,7 @@
     <section class="section6 theme-element">
       <div id="whoIsTarla" class="div6">
         <img class="img6" src="../Images/6-1.png" alt="section6">
-        <p data-i18="BetterThanbakery" class="p6_1">Better than the bakery</p>
+        <h1 data-i18="BetterThanbakery" class="p6_1">Better than the bakery</h1>
         <p data-i18="BetterThanbakeryDif" class="p6_2">
           You’ll soon be making pastries to rival the best bakeries in town. We
           use only the best ingredients for generous pastries that taste and
@@ -336,7 +336,7 @@
       </div>
       <div class="div6">
         <img class="img6" src="../Images/6-2.png" alt="section6">
-        <p data-i18="PlanetFriendly" class="p6_1">Planet-friendly packaging</p>
+        <h1 data-i18="PlanetFriendly" class="p6_1">Planet-friendly packaging</h1>
         <p data-i18="PlanetFriendlyDif" class="p6_2">
           We’ve done everything we can to make sure our packaging has the
           lightest footprint on the planet as possible. We’ve made sure
@@ -345,7 +345,7 @@
       </div>
       <div class="div6">
         <img class="img6" src="../Images/6-3.png" alt="section6">
-        <p data-i18="SimpleBake" class="p6_1">Simple to bake at home</p>
+        <h1 data-i18="SimpleBake" class="p6_1">Simple to bake at home</h1>
         <p data-i18="SimpleBakeDif" class="p6_3">
           We’ve done the hard work, so you don’t have to. Every pastry is easy
           to make with our 3-step instructions and doesn’t require any special
@@ -355,7 +355,7 @@
     </section>
     <div class="line"></div>
     <section class="section8 theme-element">
-      <p data-i18="JoinOurCommunity" class="H8">Join our community</p>
+      <h2 data-i18="JoinOurCommunity" class="H8">Join our community</h2>
       <p data-i18="GetBaked" class="p8">and let's get baked</p>
       <a
         class="button8 heme-blueButton"
