fix: made valid layoutfor WhoIsTarls.html

--- a/NotAuthorized/WhoIsTarta.html
+++ b/NotAuthorized/WhoIsTarta.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="..\NotAuthorized\whoIsTarls.css" />
-    <link rel="stylesheet" href="..\NotAuthorized\medialStyleWhoIsTarls.css" />
-    <link rel="stylesheet" href="..\changeColor.css" />
-    <link rel="stylesheet" href="popup.css" />
-    <link rel="stylesheet" href="..\effects.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../NotAuthorized/whoIsTarls.css" >
+    <link rel="stylesheet" href="../NotAuthorized/medialStyleWhoIsTarls.css" >
+    <link rel="stylesheet" href="../changeColor.css" >
+    <link rel="stylesheet" href="popup.css">
+    <link rel="stylesheet" href="../effects.css">
     <title>Who is tarla?</title>
-    <link rel="icon" href="..\Images\croissant.png" type="image/png">
+    <link rel="icon" href="../Images/croissant.png" type="image/png">
   </head>
   <body class="body theme-element">
     <header id="top" class="header theme-element lockPadding">
       <div class="hamburger-menu">
-        <input id="menu__toggle" type="checkbox" />
+        <input id="menu__toggle" type="checkbox">
         <label class="menu__btn" for="menu__toggle">
           <span></span>
         </label>
@@ -31,9 +31,9 @@
           </li>
         </ul>
       </div>
-      <a href="..\NotAuthorized\index.html"
-        ><img class="logo" src="..\Images\Frame.png" alt="logo"
-      /></a>
+      <a href="../NotAuthorized/index.html"
+        ><img class="logo" src="../Images/Frame.png" alt="logo"
+    ></a>
       <ul class="navigation ">
         <li class="li">
           <a class="link theme-element" data-i18="TermsOfService" href="#termsOfService">Terms of Service</a>
@@ -48,30 +48,26 @@
       </ul>
       <div class="switchers">
         <button data-i18="en" class="switcher changeButton theme-blueButton">
-          <img src="..\Images\UK.png" alt="light" />
+          <img src="../Images/UK.png" alt="light">
         </button>
         <button data-i18="ru" class="switcher changeButton theme-blueButton">
-          <img src="..\Images\russia.png" alt="light" />
+          <img src="../Images/russia.png" alt="light">
         </button>
       </div>
       <div class="switchers">
         <button class="changeButton theme-blueButton" id="light-theme-btn">
-          <img src="..\Images\sun.png" alt="light" />
+          <img src="../Images/sun.png" alt="light">
         </button>
         <button class="changeButton theme-blueButton" id="dark-theme-btn">
-          <img src="..\Images\night.png" alt="light" />
+          <img src="../Images/night.png" alt="light">
         </button>
       </div>
       <div class="switchers">
-        <button class="logIn popupAuthorization theme-blueButton">
-          <a href="#popup"> <img src="..\Images\authorization.png" alt="Log In" /></a>
-       </button>
-       <button  class="logIn popupRegistration theme-blueButton">
-         <a href="#popup2"><img src="..\Images\registration.png" alt="Sign Up" /></a>
-       </button>
-        </div> 
+          <a class="logIn popupAuthorization theme-blueButton" href="#popup"> <img src="../Images/authorization.png" alt="Log In"></a>
+        <a class="logIn popupRegistration theme-blueButton" href="#popup2"><img src="../Images/registration.png" alt="Sign Up"></a>
+      </div> 
     </header>
-    <h2 id="ourMessage"  class="theme-element" data-i18="OurMessage" id="ourMessege">Our message</h1>
+    <h2 id="ourMessage"  class="theme-element" data-i18="OurMessage">Our message</h2>
     <section class="section2 theme-element parallax">
       <div class="div2">
         <div>
@@ -83,10 +79,10 @@
             everyone, regardless of their dietary needs.
           </p>
         </div>
-        <img class="img" src="..\Images\6-3.png" alt="" />
+        <img class="img" src="../Images/6-3.png" alt="">
       </div>
       <div class="div2">
-        <img class="img" src="..\Images\6-2.png" alt="" />
+        <img class="img" src="../Images/6-2.png" alt="" >
         <div>
           <h3 data-i18="PreservingNature">Preserving Nature for Future Generations</h3>
           <p data-i18="PreservingNatureDif" class="p2">
@@ -108,14 +104,14 @@
             meets our high standards of taste, safety, and ethics.
           </p>
         </div>
-        <img class="img" src="..\Images\6-1.png" alt="" />
+        <img class="img" src="../Images/6-1.png" alt="" >
       </div>
     </section>
 
-    <h2 data-i18="MakeOrder" class="theme-element" id="makeOrder">How to make an order</h1>
+    <h2 data-i18="MakeOrder" class="theme-element" id="makeOrder">How to make an order</h2>
     <section class="section3 theme-element">
       <div class="div3">
-        <img class="img6" src="..\NotAuthorized\Images\1.png" alt="" />
+        <img class="img6" src="../NotAuthorized/Images/1.png" alt="" >
         <h3 data-i18="Explore" class="p6_1">Explore Our Selection</h3>
         <p data-i18="ExploreDif" class="p3">
           Begin by perusing our delectable assortment of pastry kits on our
@@ -124,7 +120,7 @@
         </p>
       </div>
       <div class="div3">
-        <img class="img6" src="..\NotAuthorized\Images\2.png" alt="" />
+        <img class="img6" src="../NotAuthorized/Images/2.png" alt="" >
         <h3 data-i18="AddToCard" class="p6_1">Add to Cart</h3>
         <p data-i18="AddToCardDif" class="p3">
           Once you've identified the irresistible treats you'd like to indulge
@@ -133,7 +129,7 @@
         </p>
       </div>
       <div class="div3">
-        <img class="img6" src="..\NotAuthorized\Images\3.png" alt="" />
+        <img class="img6" src="../NotAuthorized/Images/3.png" alt="" >
         <h3 data-i18="Proceed">Proceed to Checkout</h3>
         <p data-i18="ProceedDif" class="p3">
           When you're ready to complete your order, proceed to our secure
@@ -143,7 +139,7 @@
         </p>
       </div>
       <div class="div3">
-        <img class="img6" src="..\NotAuthorized\Images\4.png" alt="" />
+        <img class="img6" src="../NotAuthorized/Images/4.png" alt="" >
         <h3 data-i18="Confirmation">Confirmation and Preparation</h3>
         <p data-i18="ConfirmationDif" class="p3">
           After placing your order, you'll receive a confirmation email
@@ -154,7 +150,7 @@
     </section>
     <section class="section1 theme-element">
       <div id="termsOfService" class="div1">
-        <h2 data-i18="TermsOfService">Terms of Service</h1>
+        <h2 data-i18="TermsOfService">Terms of Service</h2>
         <ul class="ul1">
           <li data-i18="TermsOfService1">
             Tarla Company collects personal information such as name, email
@@ -178,7 +174,7 @@
         </ul>
       </div>
       <div id="privacyPolicy" class="div1 theme-element">
-        <h2 data-i18="Privacy">Privacy Policy</h1>
+        <h2 data-i18="Privacy">Privacy Policy</h2>
         <ul class="ul1">
           <li data-i18="Privacy1">
             By accessing or using any services provided by Tarla Company, users
@@ -216,11 +212,10 @@
             <input data-i18="Username" type="text" id="username" name="username" placeholder="Username" required>
             <input data-i18="Password" type="password" id="loginPassword" name="password" placeholder="Password" required>
            <div class="buttonDiv">
-            <button data-i18="Enter" class="authorizationButton" type="submit">Enter</button>
-            <button data-i18="Registration" class="authorizationButton popupRegistration" ><a href="#popup2">Registration</a>          
+            <button data-i18="Enter" class="authorizationButton" type="submit">Enter</button>         
            </div>
          </form>
-          <script src="..\logIn.js"></script>
+          <script src="../logIn.js"></script>
         </div>
       </div>
     </div>
@@ -276,29 +271,29 @@
         </form> 
         </div>
       </div>  
-      <script src="..\signUp.js"></script>  
+      <script src="../signUp.js"></script>  
     </div>
     <script src="popup.js"></script>
-  </body>
   <footer class="footer theme-element" >
     <div class="icon">
       <a href="tel:+375295950858">
-      <img src="..\Images\phone.png" alt="Telephone" />
+      <img src="../Images/phone.png" alt="Telephone" >
       </a>
       <a href="https://github.com/MaltSun/TarlaProgect"
-        ><img src="..\Images\github.png" alt="Github"/></a>
+        ><img src="../Images/github.png" alt="Github"></a>
       <a href="mailto:polina.solodkova507@gmail.com">
-       <img src="..\Images\e-mail.png" alt="E-mail" />
-    </a>      
+       <img src="../Images/e-mail.png" alt="E-mail" >
+     </a>      
     </div>
 <div class="divfooter" > 
-  <a class="link theme-element" data-i18="Tarla" href="..\NotAuthorized\index.html">Tarla</a>
-  <a class="link theme-element" data-i18="Location" href="..\NotAuthorized\location.html">Location</a>
-  <a class="link theme-element" data-i18="FAQ" href="..\NotAuthorized\index.html">Facts</a>
-  <a class="link theme-element" data-i18="HowToUse" href="..\NotAuthorized\index.html">How use</a>
+  <a class="link theme-element" data-i18="Tarla" href="../NotAuthorized/index.html">Tarla</a>
+  <a class="link theme-element" data-i18="Location" href="../NotAuthorized/location.html">Location</a>
+  <a class="link theme-element" data-i18="FAQ" href="../NotAuthorized/index.html">Facts</a>
+  <a class="link theme-element" data-i18="HowToUse" href="../NotAuthorized/index.html">How use</a>
 </div>
-<script src="..\changeColor.js"></script>
-<script src="..\changeLanguage.js"></script>
-    <script src="..\changeColor.js"></script>
-  </footer> 
+<script src="../changeColor.js"></script>
+<script src="../changeLanguage.js"></script>
+    <script src="../changeColor.js"></script>
+  </footer>
+</body>   
 </html>
